Add documentation, move to scss-styling and add scss-to-css generation, add more short-cuts, refactor custom exceptions and status-events, fix bounding-box per category counting, fix handling of Pascal VOC xml-files with missing "bndbox"-elements, fix bounding-box category table-view column-widths to stop display of unnecessary horizontal scroll-bar.